home: Fix headline logo in dark mode

--- a/application/public/css/colors-dark.css
+++ b/application/public/css/colors-dark.css
@@ -1,5 +1,8 @@
 /* This file gets loaded when colors mode is 'dark'. */
 
+.d-dark-none {
+    display: none !important;
+}
 
 .activity-watching {
     background-color: #007eb9;
